--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -24,7 +24,54 @@ input {
 
 .box {
 	color: #fff;
-	background: #0c55ca;
+	background: #731985;
 	padding: 12px;
 	display: inline-block;
 }
+
+.submitbutton{
+	display:block;
+  }
+
+  #wrapper {
+	width: 100%;
+	height: 40px;
+	border: 1px solid black;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  button {
+	height: 20px;
+	width: 200px;
+  }
+
+  body {
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .topnav {
+	overflow: hidden;
+	background-color: #333;
+  }
+  
+  .topnav a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+  }
+  
+  .topnav a:hover {
+	background-color: #ddd;
+	color: rgba(0, 0, 0, 0.534);
+  }
+  
+  .topnav a.active {
+	background-color: #4e28c9;
+	color: white;
+  }
