--- a/webapp/templates/index/index.html
+++ b/webapp/templates/index/index.html
@@ -1,52 +1,90 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <title>About</title>
   <meta charset="UTF-8">
-  <title>Medical Reports classifier</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"> 
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+       body {
+            background-color: rgb(248, 246, 246);
+            color: #333;
+            font: 1.5em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
+            padding: 0;
+            margin: 0;
+            
+        }
 
-<body>
- 
-  <div class="topnav">
-    <a class="active" href="/">Home</a>
-    <a href="/author">Author</a>
-    <a href="/about">About</a>
-  </div>
- <div class="grid">
+        .main-nav {
+            display: flex;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            outline: thick double #0a0a0a;
+        }
 
-  <div class="box">
+        .main-nav a {
+            padding: .5em 1em;
+            display: block;
+            
 
-  <p><strong>Fast way to classify medical research papers using NLP</strong></p>
+        }
 
-    <form action="{{ url_for('predict')}}"method="post">
-      <textarea name="paragraph_text" placeholder="Text" required="required" cols="50" rows="10"></textarea>
-      <div id="wrapper">
-        <button type="submit" class="btn">Predict your text report</button>
-      </div>
-      
-    
-    
-
+        .push {
+            margin-left: auto;
+        }
   
-  <p><strong>BACKGROUND</strong></p>
-  <p>{{ BACKGROUND_text }}</p>
-  <p><strong>METHODS</strong></p>
-   <p>{{ METHODS_text }}</p>
-   <p><strong>OBJECTIVE</strong></p>
-   <p>{{ OBJECTIVE_text }}</p>
-   <p><strong>RESULTS</strong></p>
-   <p>{{ RESULTS_text }}</p>
-   <p><strong>CONCLUSIONS</strong></p>
-   <p>{{ CONCLUSIONS_text }}</p>
-   
-   
-   
-   
-   
+        .bolded { font-weight: bold; }
+  </style>
+ <body class="w3-light-grey">
+  <nav >
+    <ul class="main-nav">
+        <li><a class="active" href="/">Home</a></li>
+        <li><a class="active" href="/about">About</a></li> 
+        <li class="push"><a href="/author">Author</a></li>
+    </ul>
+  </nav>
+  <!-- Page Container -->
+<div class="w3-content w3-margin-top" style="max-width:1400px;">
 
- </div>
+   <!-- The Grid -->
+   <div class="w3-row-padding">
+    <div class="w3-white w3-text-grey w3-card-4 w3-center">
+        <div class="w3-white w3-text-grey w3-card-4 w3-center">
+            
+            <p><strong>Fast way to classify medical research papers using NLP</strong></p>
+            <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Please enter your medical text below</b></p>
+            <form action="{{ url_for('predict')}}"method="post">
+              <textarea name="paragraph_text" placeholder="Text" required="required" cols="35" rows="7"></textarea>
+              <div id="wrapper">
+                <button type="submit" class="btn">Predict your text report</button>
+              </div>
+              <p>Accuracy</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:82%">{{ mdlAcc_text }}</div>
+              </div>
+
+              <p><strong>BACKGROUND</strong></p>
+              <p>{{ BACKGROUND_text }}</p>
+              <p><strong>METHODS</strong></p>
+              <p>{{ METHODS_text }}</p>
+              <p><strong>OBJECTIVE</strong></p>
+              <p>{{ OBJECTIVE_text }}</p>
+              <p><strong>RESULTS</strong></p>
+              <p>{{ RESULTS_text }}</p>
+              <p><strong>CONCLUSIONS</strong></p>
+              <p>{{ CONCLUSIONS_text }}</p>
+        </div>
+            
+       
+
+    </div>
+    
+    <!-- End Right Column -->
+    </div>
+    
+<!-- End Grid -->
 </div>
-
-</body>
 </html>
